force-app/main/default/objects/Job_Applicant__c/Job_Applicant__c.object-meta.xml
<CustomObject>
    <label>Job Applicant</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Job Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>