force-app/main/default/objects/Job_Applicant__c/fields/AAP_Job_Group__c.field-meta.xml
<CustomField>
    <fullName>AAP_Job_Group__c</fullName>
    <label>AAP Job Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>