force-app/main/default/objects/Job_Applicant__c/fields/Account_Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Mobile__c</fullName>
    <label>Account Manager Mobile</label>
    <type>Phone</type>
</CustomField>