force-app/main/default/objects/Job_Applicant__c/fields/Account_Manager_New__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_New__c</fullName>
    <formula>Account__r.Account_manager__r.FirstName &amp; &apos; &apos;&amp; Account__r.Account_manager__r.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>