force-app/main/default/objects/Job_Applicant__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Job__r.Account_Name_Text__c</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>