force-app/main/default/objects/Job_Applicant__c/fields/Adverse_Impact_Pct__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Impact_Pct__c</fullName>
    <label>Adverse Impact Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>