force-app/main/default/objects/Job_Applicant__c/fields/Anticipate_Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Anticipate_Decision_By__c</fullName>
    <label>Anticipate Decision By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>