force-app/main/default/objects/Job_Applicant__c/fields/Any_issue_with_24hr_Decision__c.field-meta.xml
<CustomField>
    <fullName>Any_issue_with_24hr_Decision__c</fullName>
    <label>Any issue with 24hr Decision</label>
    <length>60</length>
    <type>Text</type>
</CustomField>