force-app/main/default/objects/Job_Applicant__c/fields/Applicant_Distance_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Distance_to_Job__c</fullName>
    <label>Applicant Distance to Job</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>