force-app/main/default/objects/Job_Applicant__c/fields/Applicant_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Rate Card</label>
    <referenceTo>Rate_Card__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>