force-app/main/default/objects/Job_Applicant__c/fields/Application_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Information_Source__c</fullName>
    <label>Application Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Billboards</fullName>
            </value>
            <value>
                <fullName>College Recruiting</fullName>
            </value>
            <value>
                <fullName>Direct Recruiting</fullName>
            </value>
            <value>
                <fullName>Diversity Referral</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Ex-Employee</fullName>
            </value>
            <value>
                <fullName>Internal Employee</fullName>
            </value>
            <value>
                <fullName>Internet Job Boards</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Job Fair</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Other Print Media</fullName>
            </value>
            <value>
                <fullName>Users Group</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>