force-app/main/default/objects/Job_Applicant__c/fields/Ask_for_the_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Ask_for_the_opportunity__c</fullName>
    <label>Ask for the opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>