force-app/main/default/objects/Job_Applicant__c/fields/Availability_To_Interview__c.field-meta.xml
<CustomField>
    <fullName>Availability_To_Interview__c</fullName>
    <label>Availability To Interview</label>
    <type>Date</type>
</CustomField>