force-app/main/default/objects/Job_Applicant__c/fields/Available_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Available_To_Start__c</fullName>
    <label>Available To Start</label>
    <type>Date</type>
</CustomField>