force-app/main/default/objects/Job_Applicant__c/fields/BD_User_Report__c.field-meta.xml
<CustomField>
    <fullName>BD_User_Report__c</fullName>
    <formula>IF( Biz_Dev__r.Id = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD_User_Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>