force-app/main/default/objects/Job_Applicant__c/fields/Biz_Dev_Rep__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Rep__c</fullName>
    <formula>Job__r.Biz_Dev_Rep__c</formula>
    <label>Biz Dev Rep</label>
    <type>Text</type>
</CustomField>