force-app/main/default/objects/Job_Applicant__c/fields/Call_em_all_Scheuler_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_em_all_Scheuler_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call em all Scheuler Completed</label>
    <type>Checkbox</type>
</CustomField>