force-app/main/default/objects/Job_Applicant__c/fields/Candidate_AutoMatched__c.field-meta.xml
<CustomField>
    <fullName>Candidate_AutoMatched__c</fullName>
    <formula>Candidate__r.Automatched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate AutoMatched</label>
    <type>Checkbox</type>
</CustomField>