force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Discipline__c</fullName>
    <formula>TEXT( Candidate__r.Professional_Discipline__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Discipline</label>
    <type>Text</type>
</CustomField>