force-app/main/default/objects/Job_Applicant__c/fields/Candidate_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Candidate_FirstName__c</fullName>
    <formula>Candidate__r.FirstName</formula>
    <label>Candidate FirstName</label>
    <type>Text</type>
</CustomField>