force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Last_Name__c</fullName>
    <formula>Candidate__r.LastName</formula>
    <label>Candidate Last Name</label>
    <type>Text</type>
</CustomField>