force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone__c</fullName>
    <formula>Candidate__r.Phone</formula>
    <label>Candidate Phone</label>
    <type>Text</type>
</CustomField>