force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Presentation_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Presentation_File_URL__c</fullName>
    <label>Candidate Presentation File URL</label>
    <type>Url</type>
</CustomField>