force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Recruiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recruiter_Email__c</fullName>
    <label>Candidate Recruiter Email</label>
    <type>Email</type>
</CustomField>