force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Recruiter_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recruiter_Mobile__c</fullName>
    <label>Candidate Recruiter Mobile</label>
    <type>Phone</type>
</CustomField>