force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Recruiter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recruiter_Phone__c</fullName>
    <label>Candidate Recruiter Phone</label>
    <type>Phone</type>
</CustomField>