force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Speciality__c</fullName>
    <formula>TEXT(Candidate__r.Primary_Specialty__c)</formula>
    <label>Candidate Speciality</label>
    <type>Text</type>
</CustomField>