force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <formula>TEXT( Candidate__r.Candidate_Status__c )</formula>
    <label>Candidate Status</label>
    <type>Text</type>
</CustomField>