force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Title__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Title__c</fullName>
    <formula>Candidate__r.Title</formula>
    <label>Candidate Title</label>
    <type>Text</type>
</CustomField>