force-app/main/default/objects/Job_Applicant__c/fields/Candidate_Write_Up__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Write_Up__c</fullName>
    <label>Candidate Write Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>