force-app/main/default/objects/Job_Applicant__c/fields/Client_Offer_Letter__c.field-meta.xml
<CustomField>
    <fullName>Client_Offer_Letter__c</fullName>
    <formula>TEXT(Account__r.Client_Offer_Letter__c)</formula>
    <label>Client Offer Letter</label>
    <type>Text</type>
</CustomField>