force-app/main/default/objects/Job_Applicant__c/fields/Client_Submission_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Cnt__c</fullName>
    <formula>If ( Client_Submission_Date__c &gt; DATE(1900,01,01), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Submission Cnt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>