force-app/main/default/objects/Job_Applicant__c/fields/Client_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Date__c</fullName>
    <label>Client Submission Date</label>
    <type>Date</type>
</CustomField>