force-app/main/default/objects/Job_Applicant__c/fields/Comfortable_with_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Comfortable_with_Expectations__c</fullName>
    <label>Comfortable with Expectations</label>
    <length>60</length>
    <type>Text</type>
</CustomField>