force-app/main/default/objects/Job_Applicant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact test</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Applicants (Contact test)</relationshipLabel>
    <relationshipName>Job_Applicants2</relationshipName>
    <type>Lookup</type>
</CustomField>