force-app/main/default/objects/Job_Applicant__c/fields/Contact_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity__c</fullName>
    <formula>Candidate__r.Contact_Last_Activity__c</formula>
    <label>Contact Last Activity</label>
    <type>Text</type>
</CustomField>