force-app/main/default/objects/Job_Applicant__c/fields/Counter_Offer_Salary__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Salary__c</fullName>
    <label>Counter Offer Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>