force-app/main/default/objects/Job_Applicant__c/fields/Credentialing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credentialing Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applicants4</relationshipName>
    <type>Lookup</type>
</CustomField>