force-app/main/default/objects/Job_Applicant__c/fields/da_employer_bid_id__c.field-meta.xml
<CustomField>
    <fullName>da_employer_bid_id__c</fullName>
    <label>da employer bid id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>