force-app/main/default/objects/Job_Applicant__c/fields/Days_Client_Submission_to_Placement__c.field-meta.xml
<CustomField>
    <fullName>Days_Client_Submission_to_Placement__c</fullName>
    <formula>Placement_Date__c - Client_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Days Client Submission to Placement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>