force-app/main/default/objects/Job_Applicant__c/fields/Days_to_Fill__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Fill__c</fullName>
    <label>Days to Fill</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>