force-app/main/default/objects/Job_Applicant__c/fields/Desired_Pay__c.field-meta.xml
<CustomField>
    <fullName>Desired_Pay__c</fullName>
    <label>Desired Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>