force-app/main/default/objects/Job_Applicant__c/fields/Desired_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Desired_Pay_Type__c</fullName>
    <label>Desired Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>