force-app/main/default/objects/Job_Applicant__c/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Disability</fullName>
            </value>
            <value>
                <fullName>Partial Disability</fullName>
            </value>
            <value>
                <fullName>Full Disability</fullName>
            </value>
            <value>
                <fullName>Temporary Disability</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>