force-app/main/default/objects/Job_Applicant__c/fields/Discuss_Salary_and_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Salary_and_Benefits__c</fullName>
    <label>Discuss Salary and Benefits</label>
    <length>60</length>
    <type>Text</type>
</CustomField>