force-app/main/default/objects/Job_Applicant__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Candidate__r.FirstName &amp; &quot; &quot; &amp; Candidate__r.LastName &amp; &quot; - &quot; &amp; Job__r.Job_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>