force-app/main/default/objects/Job_Applicant__c/fields/Disposition_Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Qualifiers__c</fullName>
    <label>Disposition Qualifiers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted a different position</fullName>
            </value>
            <value>
                <fullName>Accepted position but never started</fullName>
            </value>
            <value>
                <fullName>Applied for position previously</fullName>
            </value>
            <value>
                <fullName>Cancelled or failed to show for interview</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Current employer</fullName>
            </value>
            <value>
                <fullName>Declined position</fullName>
            </value>
            <value>
                <fullName>Did not apply for a particular position</fullName>
            </value>
            <value>
                <fullName>Did not complete assessments</fullName>
            </value>
            <value>
                <fullName>Did not follow application process</fullName>
            </value>
            <value>
                <fullName>Did not meet basic requirements</fullName>
            </value>
            <value>
                <fullName>Did not pass credentialing stage</fullName>
            </value>
            <value>
                <fullName>Distance was not favorable</fullName>
            </value>
            <value>
                <fullName>Does not qualify as a profession that we staff</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Internal successful</fullName>
            </value>
            <value>
                <fullName>Lacks favorable references</fullName>
            </value>
            <value>
                <fullName>Lacks required VISA/work papers</fullName>
            </value>
            <value>
                <fullName>Lacks willingness for required travel</fullName>
            </value>
            <value>
                <fullName>No contact information</fullName>
            </value>
            <value>
                <fullName>No longer interested in the position</fullName>
            </value>
            <value>
                <fullName>No positions available</fullName>
            </value>
            <value>
                <fullName>Not best qualified</fullName>
            </value>
            <value>
                <fullName>Not rehireable by Client</fullName>
            </value>
            <value>
                <fullName>Pay requested is too high</fullName>
            </value>
            <value>
                <fullName>PLACEMENT</fullName>
            </value>
            <value>
                <fullName>Poor test results</fullName>
            </value>
            <value>
                <fullName>Position Closed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Salary requested is too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>