force-app/main/default/objects/Job_Applicant__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>TEXT(Job__r.Job_Division__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>