force-app/main/default/objects/Job_Applicant__c/fields/Do_you_need_followup_contact_info__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_followup_contact_info__c</fullName>
    <label>Do you need followup contact info</label>
    <length>60</length>
    <type>Text</type>
</CustomField>