force-app/main/default/objects/Job_Applicant__c/fields/Does_Org_Stability_Match_Goals__c.field-meta.xml
<CustomField>
    <fullName>Does_Org_Stability_Match_Goals__c</fullName>
    <label>Does Org Stability Match Goals</label>
    <length>60</length>
    <type>Text</type>
</CustomField>