force-app/main/default/objects/Job_Applicant__c/fields/EEO_Job_Category__c.field-meta.xml
<CustomField>
    <fullName>EEO_Job_Category__c</fullName>
    <label>EEO Job Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>