force-app/main/default/objects/Job_Applicant__c/fields/Experience_on_Call__c.field-meta.xml
<CustomField>
    <fullName>Experience_on_Call__c</fullName>
    <label>Experience on Call</label>
    <type>TextArea</type>
</CustomField>