force-app/main/default/objects/Job_Applicant__c/fields/Factors_to_Accept__c.field-meta.xml
<CustomField>
    <fullName>Factors_to_Accept__c</fullName>
    <label>Factors to Accept</label>
    <type>TextArea</type>
</CustomField>