force-app/main/default/objects/Job_Applicant__c/fields/Forget_To_Ask_Questions__c.field-meta.xml
<CustomField>
    <fullName>Forget_To_Ask_Questions__c</fullName>
    <label>Forget To Ask Questions</label>
    <type>TextArea</type>
</CustomField>