force-app/main/default/objects/Job_Applicant__c/fields/Get_Managers_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Get_Managers_Contact_Info__c</fullName>
    <label>Get Managers Contact Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>