force-app/main/default/objects/Job_Applicant__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Label__c</field>
            <operation>equals</operation>
            <value>Hiring Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Applicants (Hiring Manager)</relationshipLabel>
    <relationshipName>Job_Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>