force-app/main/default/objects/Job_Applicant__c/fields/How_Was_The_Commute__c.field-meta.xml
<CustomField>
    <fullName>How_Was_The_Commute__c</fullName>
    <label>How Was The Commute</label>
    <length>60</length>
    <type>Text</type>
</CustomField>