force-app/main/default/objects/Job_Applicant__c/fields/HTML_Editor_Hidden_Field__c.field-meta.xml
<CustomField>
    <fullName>HTML_Editor_Hidden_Field__c</fullName>
    <label>HTML Editor Hidden Field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>