force-app/main/default/objects/Job_Applicant__c/fields/Impression_of_Manager__c.field-meta.xml
<CustomField>
    <fullName>Impression_of_Manager__c</fullName>
    <label>Impression of Manager</label>
    <type>TextArea</type>
</CustomField>