force-app/main/default/objects/Job_Applicant__c/fields/In_Person_Call_Experience__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Call_Experience__c</fullName>
    <label>In Person Call Experience</label>
    <type>TextArea</type>
</CustomField>