force-app/main/default/objects/Job_Applicant__c/fields/In_Person_Facility_Aesthetics__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Facility_Aesthetics__c</fullName>
    <label>In Person Facility Aesthetics</label>
    <length>60</length>
    <type>Text</type>
</CustomField>