force-app/main/default/objects/Job_Applicant__c/fields/INP_Appointment__c.field-meta.xml
<CustomField>
    <fullName>INP_Appointment__c</fullName>
    <label>INP Appointment</label>
    <type>DateTime</type>
</CustomField>