force-app/main/default/objects/Job_Applicant__c/fields/Interviewing_Anywhere_Else__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Anywhere_Else__c</fullName>
    <label>Interviewing Anywhere Else</label>
    <length>60</length>
    <type>Text</type>
</CustomField>