force-app/main/default/objects/Job_Applicant__c/fields/Interviewing_Manager_Title__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Manager_Title__c</fullName>
    <label>Interviewing Manager/Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>