force-app/main/default/objects/Job_Applicant__c/fields/Is_Active_Submission__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Submission</label>
    <type>Checkbox</type>
</CustomField>