force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Applicant Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applicants5</relationshipName>
    <type>Lookup</type>
</CustomField>