force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Recruiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Recruiter_Email__c</fullName>
    <formula>Job_Applicant_Recruiter__r.Email</formula>
    <label>Job Applicant Recruiter Email</label>
    <type>Text</type>
</CustomField>