force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Recruiter_Name__c</fullName>
    <formula>Job_Applicant_Recruiter__r.FirstName &amp; &quot;&quot; &amp;  Job_Applicant_Recruiter__r.LastName</formula>
    <label>Job Applicant Recruiter Name</label>
    <type>Text</type>
</CustomField>