force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Recruiter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Recruiter_Phone__c</fullName>
    <formula>Job_Applicant_Recruiter__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Applicant Recruiter Phone</label>
    <type>Text</type>
</CustomField>